solved the issue of my social icons in footer spacing weird and hanging to the right!

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -5,7 +5,6 @@
     grid-gap: 30px;
     list-style: none;
     text-align: center;
-    width: 8vw;
     top: 10px;
     margin-left: 2%;
     margin-right: 2%; 
